--- a/index.html
+++ b/index.html
@@ -209,10 +209,10 @@
         style="background-image: url(images/banner.png); background-size: cover ; background-repeat: no-repeat; background-position: center;">
         <div class="text-content text-white py-5 my-5">
           <p class="fs-4">
-            VFX / Graphics Head
+            Platform / Devops Engineer
           </p>
           <h1 class="display-1">
-            Jessica <br> Kobessi
+            Sumit <br> Bera
           </h1>
         </div>
         <div class="row text-uppercase bg-black rounded-4 p-3 mt-5">
