--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
   <section>
     <div class="container">
       <div class="banner rounded-4 p-5"
-        style="background-image: url(images/banner.png); background-size: cover ; background-repeat: no-repeat; background-position: center;">
+        style="background-image: url(images/banner.jpg); background-size: cover ; background-repeat: no-repeat; background-position: center;">
         <div class="text-content text-white py-5 my-5">
           <p class="fs-4">
             Platform / Devops Engineer
