change the logo.png

--- a/index.html
+++ b/index.html
@@ -94,8 +94,8 @@
       <div class="container-fluid">
         <div class="d-flex align-items-center g-4">
           <a class="navbar-brand d-flex" href="index.html">
-            <img src="images/logo.png" class="img-fluid" id="logo">
-          </a>
+            <!--<img src="images/logo.png" class="img-fluid" id="logo">
+          </a>-->
           <div class="icon px-5">
             <a href="#" class="text-decoration-none">
               <svg class="skype" width="24" height="24">
